// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppController class will render the "unauthorized" page if JWT has invalid subject 1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <link rel="preconnect" href="https://fonts.googleapis.com" />
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
    <link
      href="https://fonts.googleapis.com/css2?family=Exo+2&family=Lobster&display=swap"
      rel="stylesheet"
    />
    <link
      href="https://fonts.googleapis.com/css2?family=Alegreya+Sans&display=swap"
      rel="stylesheet"
    />
    <link rel="icon" type="image/png" href="/favicon.ico" />
    <link rel="stylesheet" href="/index.css" />
    <title>Bottom Time Platform Authenticator</title>
  </head>

  <body class="bg-gray-700">
    <div class="container mx-auto font-content text-gray-200">
      <div class="grid grid-cols-1 md:grid-cols-5">
        <div
          class="col-span-1 col-start-1 md:col-span-3 md:col-start-2 bg-blue-600 my-16 rounded-xl shadow-lg shadow-blue-300 p-8 space-y-4 text-center"
        >
          <h1 class="pb-3">Bottom Time Platform Authenticator</h1>

          <p class="text-4xl text-red-400">
            <i class="fa-solid fa-hand"></i>
          </p>

          <p>
            <span class="font-bold">Stop!</span> You are not authorized to proceed! The JWT you provided is invalid or expired!
            You can try returning to the home page to try to login again.
          </p>

          <p>
            <a href="/">Return to Home</a>
          </p>
        </div>
      </div>
    </div>

    <script
      src="https://kit.fontawesome.com/0abec2fadd.js"
      crossorigin="anonymous"
    ></script>
  </body>
</html>
"
`;

exports[`AppController class will render the "unauthorized" page if JWT is expired 1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <link rel="preconnect" href="https://fonts.googleapis.com" />
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
    <link
      href="https://fonts.googleapis.com/css2?family=Exo+2&family=Lobster&display=swap"
      rel="stylesheet"
    />
    <link
      href="https://fonts.googleapis.com/css2?family=Alegreya+Sans&display=swap"
      rel="stylesheet"
    />
    <link rel="icon" type="image/png" href="/favicon.ico" />
    <link rel="stylesheet" href="/index.css" />
    <title>Bottom Time Platform Authenticator</title>
  </head>

  <body class="bg-gray-700">
    <div class="container mx-auto font-content text-gray-200">
      <div class="grid grid-cols-1 md:grid-cols-5">
        <div
          class="col-span-1 col-start-1 md:col-span-3 md:col-start-2 bg-blue-600 my-16 rounded-xl shadow-lg shadow-blue-300 p-8 space-y-4 text-center"
        >
          <h1 class="pb-3">Bottom Time Platform Authenticator</h1>

          <p class="text-4xl text-red-400">
            <i class="fa-solid fa-hand"></i>
          </p>

          <p>
            <span class="font-bold">Stop!</span> You are not authorized to proceed! The JWT you provided is invalid or expired!
            You can try returning to the home page to try to login again.
          </p>

          <p>
            <a href="/">Return to Home</a>
          </p>
        </div>
      </div>
    </div>

    <script
      src="https://kit.fontawesome.com/0abec2fadd.js"
      crossorigin="anonymous"
    ></script>
  </body>
</html>
"
`;

exports[`AppController class will render the "unauthorized" page if JWT is forged with bad secret 1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <link rel="preconnect" href="https://fonts.googleapis.com" />
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
    <link
      href="https://fonts.googleapis.com/css2?family=Exo+2&family=Lobster&display=swap"
      rel="stylesheet"
    />
    <link
      href="https://fonts.googleapis.com/css2?family=Alegreya+Sans&display=swap"
      rel="stylesheet"
    />
    <link rel="icon" type="image/png" href="/favicon.ico" />
    <link rel="stylesheet" href="/index.css" />
    <title>Bottom Time Platform Authenticator</title>
  </head>

  <body class="bg-gray-700">
    <div class="container mx-auto font-content text-gray-200">
      <div class="grid grid-cols-1 md:grid-cols-5">
        <div
          class="col-span-1 col-start-1 md:col-span-3 md:col-start-2 bg-blue-600 my-16 rounded-xl shadow-lg shadow-blue-300 p-8 space-y-4 text-center"
        >
          <h1 class="pb-3">Bottom Time Platform Authenticator</h1>

          <p class="text-4xl text-red-400">
            <i class="fa-solid fa-hand"></i>
          </p>

          <p>
            <span class="font-bold">Stop!</span> You are not authorized to proceed! The JWT you provided is invalid or expired!
            You can try returning to the home page to try to login again.
          </p>

          <p>
            <a href="/">Return to Home</a>
          </p>
        </div>
      </div>
    </div>

    <script
      src="https://kit.fontawesome.com/0abec2fadd.js"
      crossorigin="anonymous"
    ></script>
  </body>
</html>
"
`;

exports[`AppController class will respond to a request for the home page as an anonymous user 1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <link rel="preconnect" href="https://fonts.googleapis.com" />
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
    <link
      href="https://fonts.googleapis.com/css2?family=Exo+2&family=Lobster&display=swap"
      rel="stylesheet"
    />
    <link
      href="https://fonts.googleapis.com/css2?family=Alegreya+Sans&display=swap"
      rel="stylesheet"
    />
    <link rel="icon" type="image/png" href="/favicon.ico" />
    <link rel="stylesheet" href="/index.css" />
    <title>Bottom Time Platform Authenticator</title>
  </head>

  <body class="bg-gray-700">
    <div class="container mx-auto font-content text-gray-200">
      <div class="grid grid-cols-1 md:grid-cols-5">
        <div
          class="col-span-1 col-start-1 md:col-span-3 md:col-start-2 bg-blue-600 my-16 rounded-xl shadow-lg shadow-blue-300 p-8 space-y-4 text-center"
        >
          <h1 class="pb-3">Bottom Time Platform Authenticator</h1>

          <p>
            It seems you are not logged in yet. Please proceed to Google to
            authenticate. (Your Google account will need to be registered with the platform!)
          </p>

          <div>
            <a href="/login">
              <button>
                <p class="flex gap-3 items-center">
                  <span>
                    <i class="fa-brands fa-google"></i>
                  </span>
                  <span>Login with Google</span>
                </p>
              </button>
            </a>
          </div>
        </div>
      </div>
    </div>

    <script src="/main.js"></script>
    <script
      src="https://kit.fontawesome.com/0abec2fadd.js"
      crossorigin="anonymous"
    ></script>
  </body>
</html>
"
`;

exports[`AppController class will respond to a request for the home page as an authenticated user 1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <link rel="preconnect" href="https://fonts.googleapis.com" />
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
    <link
      href="https://fonts.googleapis.com/css2?family=Exo+2&family=Lobster&display=swap"
      rel="stylesheet"
    />
    <link
      href="https://fonts.googleapis.com/css2?family=Alegreya+Sans&display=swap"
      rel="stylesheet"
    />
    <link rel="icon" type="image/png" href="/favicon.ico" />
    <link rel="stylesheet" href="/index.css" />
    <title>Bottom Time Platform Authenticator</title>
  </head>

  <body class="bg-gray-700">
    <div class="container mx-auto font-content text-gray-200">
      <div class="grid grid-cols-1 md:grid-cols-5">
        <div
          class="col-span-1 col-start-1 md:col-span-3 md:col-start-2 bg-blue-600 my-16 rounded-xl shadow-lg shadow-blue-300 p-8 space-y-4 text-center"
        >
          <h1 class="pb-3">Bottom Time Platform Authenticator</h1>

          <p>
            You are currently logged in as
            <span class="font-bold">tommy@gmail.org</span>.
            You can use the following authorization header to access the environment.
          </p>

          <div class="flex flex-col gap-3 justify-center">
            <p class="font-bold text-xl">x-bt-auth</p>

            <div class="flex gap-2 items-start">
              <div class="group relative">
                <a id="btnCopy" class="cursor-pointer text-3xl">
                  <i class="fa-solid fa-copy"></i>
                </a>
                <span
                  id="msgCopied"
                  class="absolute -top-7 -left-7 bg-gray-900 text-gray-100 rounded-full w-24 px-3 invisible"
                >
                  Copied!
                </span>
              </div>

              <p id="jwt" class="break-all font-mono text-sm">
                eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhdWQiOlsiZ21haWwub3JnIiwib3RoZXJzaXRlLmNvbSJdLCJzdWIiOiJ0b21teUBnbWFpbC5vcmciLCJpYXQiOjE3Mjc5NzQyNDcsImV4cCI6MTcyNzk3Nzg0N30.RzaHvo7ynlJLva6y0F7RrPDf4ncCzkE6DTyxHdqgWIw
              </p>
            </div>
          </div>

          <p>
            <a href="/logout">
              <button>
                Logout
              </button>
            </a>
          </p>
        </div>
      </div>
    </div>

    <script src="/main.js"></script>
    <script
      src="https://kit.fontawesome.com/0abec2fadd.js"
      crossorigin="anonymous"
    ></script>
  </body>
</html>
"
`;
